--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "main": "index.js",
   "bin": "./bin/cli.js",
   "scripts": {
+    "reset:migrate": "node ./src/tests/testMigrate.js",
     "start": "node src/server",
-    "dev": "nodemon src/server"
+    "dev": "nodemon src/server",
+    "test": "jest --detectOpenHandles",
+    "pretest": "npm run reset:migrate"
   },
   "keywords": [],
   "author": "",
@@ -23,6 +26,8 @@
     "sequelize": "6.37.3"
   },
   "devDependencies": {
-    "nodemon": "3.1.3"
+    "jest": "^29.7.0",
+    "nodemon": "3.1.3",
+    "supertest": "^7.0.0"
   }
 }
