--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "node src/server",
     "dev": "nodemon src/server",
     "test": "jest --detectOpenHandles",
-    "pretest": "npm run reset:migrate"
+    "pretest": "npm run reset:migrate",
+    "postTest": "node ./src/tests/postTest.js"
   },
   "keywords": [],
   "author": "",
