--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "create-exp-sq",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/server.js",
   "bin": "./bin/cli.js",
   "scripts": {
     "reset:migrate": "node ./src/tests/testMigrate.js",
@@ -22,6 +22,7 @@
     "express": "4.19.2",
     "helmet": "7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "pg": "8.12.0",
     "pg-hstore": "2.3.4",
     "sequelize": "6.37.3"
